    - Added WoopsiString += operator overload (carpfish).
    - Added WoopsiString == operator overload (carpfish).
    - Added WoopsiString != operator overload (carpfish).
    - Added WoopsiString::format() (carpfish).
    - Added WoopsiString::init() and moved repeated code out of constructors.
    - Added case sensitive switch to WoopsiString::compareTo() (carpfish).

  V1.0 (20110201)
  
  - Fixes:
    - Rect::getAddition() returns the correct rectangle.
    - All .NET tools work correctly.

  V0.99.6 (20101101)
  
  - Fixes:
    - Fixed scrolling problem in top screen.
    - Gadget::changeDimensions() no longer leaves gadgets accidentally hidden.
    - Division by 0 fixed in Range class when max value == min value.
    - Document::stripTopLines() no longer wraps text twice.
    - WoopsiString::getCharAt() returns NULL if index is out of valid range.
    - Removed "Loading" message from FileListBox.
    - Fix to ScrollingListBox scrollbar grip size.
    - Support for 1 or 2 of physical displays (helps with SDL ports to other
      platforms).
    - Compiler warning fixes.
    - MultiLineTextBox scrolls to follow cursor when text is inserted.
    - WoopsiString::encodeCodePoint() numBytes parameter is optional.
    - WoopsiString::getCodePoint() numChars parameter is optional.
    - WoopsiString::getCodePoint() returns the correct number of chars if the
      codepoint is invalid.
    - Fixed clipping bug in PackedFont1::renderChar() (Lakedaemon).
    - Fixed clipping bug in PackedFont16::renderChar() (Lakedaemon).
    - TextBox::getPreferredDimensions() allows space for the cursor if visible.
    - Fixed null pointer dereference in WoopsiString::getCodePoint.
  
  - New Features:
    - Added Debug::flipToTopScreen().
    - Added Debug::flipToBottomScreen().
    - Added Debug::flipScreens().
    - Added Debug::raiseToTop().
    - Added Debug::lowerToBottom().
    - Added Debug::wvsnprintf().